--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -12,7 +12,8 @@
 
     <title>TouristCation</title>
   </head>
-  <body id="root" class="bg-color">
+  <body class="bg-color">
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
   </body>
 </html>
